# multistageALM

./: CMakeCache.txt  CMakeLists.txt  Conjugate_gradient.cu  Makefile  README.md  admmsolver.cu  cmake_install.cmake  cnic_sparsematrix.cu  cnic_sparsematrix.h  main_admm.cpp  matrix_function.h  multistageALM.cbp  mytest_sparse.cu
Common/: Common.h  GridTools.h  Makefile  MultiScaleTools.h  basic_settings.h
Common/Models/: Geometry_Sphere.cpp  OT.h  cmake_install.cmake
migrate/: Conjugate_gradient.cu  Conjugate_gradient.h  admmsolver.cu  cnic_mathlib.h  cnic_sparsematrix.cu  cnic_sparsematrix.h  cnicsparsematrix.cpp  cnicsparsematrix.h  matrix_function.cu  matrix_function.h  mytest_sparse.cu  mytest_sparse.h  resources.h  thrust_tool.cu  thrust_tool.h  toolbox_dongdong.cu  toolbox_dongdong.h
migrate/dpct_output/: Conjugate_gradient.dp.cpp  Conjugate_gradient.h  Conjugate_gradient.h.yaml  admmsolver.dp.cpp  admmsolver.h  cnic_sparsematrix.dp.cpp  cnic_sparsematrix.h  cnic_sparsematrix.h.yaml  main_admm.cpp.dp.cpp  matrix_function.dp.cpp  matrix_function.h  matrix_function.h.yaml  mytest_sparse.dp.cpp  mytest_sparse.h  mytest_sparse.h.yaml  resources.dp.cpp  resources.h  resources.h.yaml  thrust_tool.dp.cpp  thrust_tool.h  thrust_tool.h.yaml  toolbox_dongdong.dp.cpp
sycl/: CMakeLists.txt  Conjugate_gradient.dp.cpp  Conjugate_gradient.h  README.md  admmsolver.dp.cpp  admmsolver.h  cnic_sparsematrix.dp.cpp  cnic_sparsematrix.h  cnicsparsematrix.h  main_admm.cpp  matrix_function.dp.cpp  matrix_function.h  mytest_sparse.dp.cpp  resources.h
sycl/Common/: Tools.cpp  Tools.h  cmake_install.cmake
sycl/Common/Models/: Makefile  TGeometry.h  WFR.h
testcase/cuda_input/202/: A.txt  AAA.txt  Aeqy.txt  B.txt  C.txt  DD.mat  LA.mat  M1.txt  N1.mat  S.mat  UA.mat  a.mat  b.mat  beq.mat  beqy.mat  data.mat  l1.mat  xk.mat
